# nuelo-spectra

./: .env.docker.example  .gitignore  API-REFERENCE.md  API_MCP_REFERENCE.md  DEPLOYMENT.md  Dockerfile.admin  Dockerfile.admin.dockerignore  Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.frontend  Dockerfile.frontend.dockerignore  README.md  compose.yaml
backend/: .env.example  docker-entrypoint.sh  pyproject.toml  test_memory_verification.py
backend/alembic/: env.py
backend/alembic/versions/: 059_01_stripe_event_user_id_and_discount_codes.py  2792e8318130_migrate_langgraph_checkpoints_and_.py  357a798917d0_add_generated_code_to_signals.py  b3f8a1c2d4e5_add_api_keys_table.py  (+17 more)
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  mcp_server.py  scheduler.py
backend/tests/: __init__.py  conftest.py  test_api_key_service.py  test_billing_history.py  test_billing_models.py  test_chart_intelligence.py  test_code_checker.py  test_collections.py  test_credit_dual_balance.py  test_dual_balance.py  test_graph_visualization.py  test_llm_providers.py  test_models_import.py  test_orphan_refund.py  test_platform_settings_pulse.py  test_plotly_availability.py  test_pricing_sync.py  test_pulse_agent.py  test_pulse_endpoints.py  test_pulse_schemas_config.py  test_pulse_service.py  test_routing.py  test_scheduler_skip.py  test_subscription_cancel.py  test_subscription_change.py  test_subscription_service.py  test_tier_config.py  test_tier_gating.py  test_trial.py  test_user_classes_workspace.py  test_visualization_agent.py  test_webhook.py
(+1239 files in other folders)
